Added Iframe for whiteboard and few CSS changes

--- a/launch_whoosh.html
+++ b/launch_whoosh.html
@@ -14,7 +14,7 @@
 <script type="text/javascript" src="audiobridgetest.js"></script>
 <link rel="stylesheet" href="css/cerulean/bootstrap.css" type="text/css"/>
 <link rel="stylesheet" href="css/demo.css" type="text/css"/>
-<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css"/>
+<link rel="stylesheet" href="css/font-awesome.css"/>
 </head>
 <body>
 <!--
@@ -54,7 +54,7 @@
 			<div class="container" id="details">
 				<div class="row">
 					<div class="col-md-12">
-										<button class="btn btn-hg btn-embossed btn-info" autocomplete="off" id="start">Start</button>
+						<button style="width:250px;" class="btn btn-hg btn-embossed btn-success" autocomplete="off" id="start">Start</button>
 					</div>
 				</div>
 			</div>
@@ -74,8 +74,10 @@
 			</div>
 			<div class="container hide" id="room">
 				<div class="row">
+						<iframe height="600px" width="1200px" scrolling="no"  src="http://100.116.23.181:3000"></iframe>
 					<div class="col-md-6">
 						<div class="panel panel-default">
+					
 							<div class="panel-heading">
 								<h3 class="panel-title">Participants <span class="label label-info hide" id="participant"></span>
 								<button class="btn-xs btn-danger hide pull-right" autocomplete="off" id="toggleaudio">Mute</button></h3>
