--- a/launch_whoosh.html
+++ b/launch_whoosh.html
@@ -21,10 +21,10 @@
 <a href="https://github.com/meetecho/janus-gateway"><img style="position: absolute; top: 0; left: 0; border: 0; z-index: 1001;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" alt="Fork me on GitHub"></a>
 -->
 
-<nav class="navbar navbar-default navbar-static-top">
+<nav class="navbar navbar-default navbar-static-top" style="background:#196419">
 <div class="container">
 	<div class="navbar-header">
-		<a class="navbar-brand" href="launch_whoosh.html">Whoosh</a>
+	<img src="whoosh.png" style = "float:left;width:70px;height: 70px;background: #555;" alt="logo" />
 		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
@@ -48,7 +48,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<div class="page-header">
-				<h1>Welcome to Whoosh , Real time whiteboard
+				<h1>Welcome to a real time whiteboard
 				</h1>
 			</div>
 			<div class="container" id="details">
