--- a/launch_whoosh.html
+++ b/launch_whoosh.html
@@ -53,8 +53,12 @@
 			</div>
 			<div class="container" id="details">
 				<div class="row">
+				<blockquote>Easily collaborate with your collegues. Draw on white board while talking with them.</blockquote> 
+					<blockquote>Hassle free and easy to use.</blockquote> 
 					<div class="col-md-12">
+					<center>
 						<button style="width:250px;" class="btn btn-hg btn-embossed btn-success" autocomplete="off" id="start">Start</button>
+					</center>
 					</div>
 				</div>
 			</div>
