--- a/launch_whoosh.html
+++ b/launch_whoosh.html
@@ -48,14 +48,17 @@
 	<div class="row">
 		<div class="col-md-12">
 			<div class="page-header">
-				<h1>Welcome to a real time whiteboard
+				<h1>Welcome to whoosh, real time whiteboard
 				</h1>
 			</div>
-			<div class="container" id="details">
+			<div class="container" id="details" style="color:white;">
 				<div class="row">
+				<div class="jumbotron" style="background:#4C4141;font-size:14px;">
 				<blockquote>Easily collaborate with your collegues. Draw on white board while talking with them.</blockquote> 
 					<blockquote>Hassle free and easy to use.</blockquote> 
-					<div class="col-md-12">
+					<blockquote>Just pass collaborator the link to connect and whoosh...</blockquote>
+					</div>
+										<div class="col-md-12">
 					<center>
 						<button style="width:250px;" class="btn btn-hg btn-embossed btn-success" autocomplete="off" id="start">Start</button>
 					</center>
@@ -78,7 +81,7 @@
 			</div>
 			<div class="container hide" id="room">
 				<div class="row">
-						<iframe height="600px" width="1200px" scrolling="no"  src="http://100.116.23.181:3000"></iframe>
+						<iframe height="600px" width="1200px" scrolling="no"  src="http://192.168.0.8:3000"></iframe>
 					<div class="col-md-6">
 						<div class="panel panel-default">
 					
