Added real time notifications to whiteboard

--- a/launch_whoosh.html
+++ b/launch_whoosh.html
@@ -8,6 +8,7 @@
 <script type="text/javascript" src="jquery.min.js" ></script>
 <script type="text/javascript" src="jquery.blockUI.js" ></script>
 <script type="text/javascript" src="js/bootstrap.js"></script>
+<script type="text/javascript" src="js/alertify.js"></script>
 <script type="text/javascript" src="js/bootbox.min.js"></script>
 <script type="text/javascript" src="js/spin.min.js"></script>
 <script type="text/javascript" src="janus.js" ></script>
@@ -81,7 +82,7 @@
 			</div>
 			<div class="container hide" id="room">
 				<div class="row">
-						<iframe height="600px" width="1200px" scrolling="no"  src="http://192.168.0.8:3000"></iframe>
+						<iframe height="670px" width="1130px" scrolling="no"  src="http://192.168.0.8:3000"></iframe>
 					<div class="col-md-6">
 						<div class="panel panel-default">
 					
