Fixed the mobile web sresolution issue

--- a/launch_whoosh.html
+++ b/launch_whoosh.html
@@ -8,7 +8,6 @@
 <script type="text/javascript" src="jquery.min.js" ></script>
 <script type="text/javascript" src="jquery.blockUI.js" ></script>
 <script type="text/javascript" src="js/bootstrap.js"></script>
-<script type="text/javascript" src="js/alertify.js"></script>
 <script type="text/javascript" src="js/bootbox.min.js"></script>
 <script type="text/javascript" src="js/spin.min.js"></script>
 <script type="text/javascript" src="janus.js" ></script>
@@ -49,15 +48,15 @@
 	<div class="row">
 		<div class="col-md-12">
 			<div class="page-header">
-				<h1>Welcome to whoosh, real time whiteboard
+				<h1>Welcome to whoosh, real time whiteboard with audio conferencing
 				</h1>
 			</div>
 			<div class="container" id="details" style="color:white;">
 				<div class="row">
-				<div class="jumbotron" style="background:#4C4141;font-size:14px;">
+				<div class="jumbotron" style="background:#3E4155;font-size:14px;">
+				<center><img src="web.svg" class="icon" alt="Whoosh for education"></center>
 				<blockquote>Easily collaborate with your collegues. Draw on white board while talking with them.</blockquote> 
 					<blockquote>Hassle free and easy to use.</blockquote> 
-					<blockquote>Just pass collaborator the link to connect and whoosh...</blockquote>
 					</div>
 										<div class="col-md-12">
 					<center>
@@ -82,7 +81,7 @@
 			</div>
 			<div class="container hide" id="room">
 				<div class="row">
-						<iframe height="670px" width="1130px" scrolling="no"  src="http://192.168.0.8:3000"></iframe>
+						<iframe height="670px" width="1130px" style="position:fixed; top:0px; left:0px; bottom:0px; right:0px; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;" scrolling="no"  src="http://100.117.96.69:3000"></iframe>
 					<div class="col-md-6">
 						<div class="panel panel-default">
 					
